--- a/Assignment-1/Assignment-1.ipynb
+++ b/Assignment-1/Assignment-1.ipynb
@@ -8,9 +8,13 @@
     "# Problem 1\n",
     "\n",
     "## Part A\n",
+    "<div style=\"background-color: rgb(50, 50, 50);\">\n",
+    "\n",
     "```\n",
     "f(x) = x^2 + log(x)\n",
     "```\n",
+    "\n",
+    "</div>\n",
     "L(x) = f(x0) + f'(x0)(x-x0)<br>\n",
     "<br>\n",
     "Since,  f'(x) = 2x + 1/x<br>\n",
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
