problem 3 bhi ho gayi hai

--- a/Assignment-1/Assignment-1.ipynb
+++ b/Assignment-1/Assignment-1.ipynb
@@ -8,13 +8,9 @@
     "# Problem 1\n",
     "\n",
     "## Part A\n",
-    "<div style=\"background-color: rgb(50, 50, 50);\">\n",
-    "\n",
     "```\n",
     "f(x) = x^2 + log(x)\n",
     "```\n",
-    "\n",
-    "</div>\n",
     "L(x) = f(x0) + f'(x0)(x-x0)<br>\n",
     "<br>\n",
     "Since,  f'(x) = 2x + 1/x<br>\n",
@@ -26,7 +22,7 @@
     "        <br>\n",
     "Therefore,  L(x) = 1 + 3(x-1)<br>\n",
     "            L(x) = 3x - 2\n",
-    "\n",
+    "            \n",
     "```\n",
     "L(x) = 3x - 2\n",
     "```\n",
@@ -49,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aditi\\AppData\\Local\\Temp\\ipykernel_22552\\268736114.py:5: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\aditi\\AppData\\Local\\Temp\\ipykernel_44296\\268736114.py:5: RuntimeWarning: divide by zero encountered in log\n",
       "  return x**2 + np.log(x)\n"
      ]
     },
@@ -116,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aditi\\AppData\\Local\\Temp\\ipykernel_22552\\3251189736.py:5: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\aditi\\AppData\\Local\\Temp\\ipykernel_44296\\3251189736.py:5: RuntimeWarning: divide by zero encountered in log\n",
       "  return x**2 + np.log(x)\n"
      ]
     },
@@ -165,6 +161,59 @@
     "plt.plot(x, eQ(x)/(x-1)**2, label='eQ(x)/(x-1)^2')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem 2\n",
+    "```\n",
+    "f(x, y) = (x^2 - 3y^2) + (sin(x^2 + y^2))^2\n",
+    "```\n",
+    "∇f(x,y) = [∂(x, y)/∂x, ∂(x, y)/∂y]<br>\n",
+    "```\n",
+    "∇f(x,y) = [4x(x^2 - 3y^2) + 4xsin(x^2 + y^2)cos(x^2 + y^2), -12y(x^2 - 3y^2) + 4ysin(x^2 + y^2)cos(x^2 + y^2)]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum at: (-0.09575,-0.05528)\n",
+      "Minimum Value: 0.00015\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def f(x, y):\n",
+    "    return (x**2 - 3*y**2)**2 + np.sin(x**2 + y**2)**2\n",
+    "\n",
+    "def gradient(x, y):\n",
+    "    grad_x = 4*x*(x**2 - 3*y**2) + 4*x*np.sin(x**2 + y**2)*np.cos(x**2 + y**2)\n",
+    "    grad_y = -6*y*(x**2 - 3*y**2) + 4*y*np.sin(x**2 + y**2)*np.cos(x**2 + y**2)\n",
+    "    return grad_x, grad_y\n",
+    "\n",
+    "def descend():\n",
+    "    x = y = 1\n",
+    "    for i in range(100):\n",
+    "        grad_x, grad_y = gradient(x, y)\n",
+    "        x -= 0.1*grad_x\n",
+    "        y -= 0.1*grad_y\n",
+    "    return x, y\n",
+    "\n",
+    "min_x, min_y = descend()\n",
+    "print(\"Minimum at: (\"+str(round(min_x, 5))+\",\"+str(round(min_y, 5))+\")\")\n",
+    "print(\"Minimum Value:\", round(f(min_x, min_y), 5))"
    ]
   }
  ],
