last bhi kar liya

--- a/Assignment-1/Assignment-1.ipynb
+++ b/Assignment-1/Assignment-1.ipynb
@@ -172,9 +172,9 @@
     "```\n",
     "f(x, y) = (x^2 - 3y^2) + (sin(x^2 + y^2))^2\n",
     "```\n",
-    "∇f(x,y) = [∂(x, y)/∂x, ∂(x, y)/∂y]<br>\n",
+    "∇f(x,y) = [∂f(x, y)/∂x, ∂f(x, y)/∂y]<br>\n",
     "```\n",
-    "∇f(x,y) = [4x(x^2 - 3y^2) + 4xsin(x^2 + y^2)cos(x^2 + y^2), -12y(x^2 - 3y^2) + 4ysin(x^2 + y^2)cos(x^2 + y^2)]\n",
+    "∇f(x,y) = [4x(x^2 - 3y^2) + 4xsin(x^2 + y^2)cos(x^2 + y^2), -6y(x^2 - 3y^2) + 4ysin(x^2 + y^2)cos(x^2 + y^2)]\n",
     "```\n"
    ]
   },
@@ -214,6 +214,65 @@
     "min_x, min_y = descend()\n",
     "print(\"Minimum at: (\"+str(round(min_x, 5))+\",\"+str(round(min_y, 5))+\")\")\n",
     "print(\"Minimum Value:\", round(f(min_x, min_y), 5))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem 3\n",
+    "```\n",
+    "g1(X1, x2) = 2x2 - x1\n",
+    "g2(X1, x2) = 2x1 - x2 \n",
+    "g3(X1, x2) = 1 - x1 - x2\n",
+    "```\n",
+    "∇Ψ(x1, x2) = [∂Ψ(x1, x2)/∂x1, ∂Ψ(x1, x2)/∂x2]<br>\n",
+    "```\n",
+    "∇Ψ(x1, x2) = [1/g1(x1, x2) - 2/g2(x1, x2) + 1/g3(x1, x2), -2/g1(x1, x2) + 1/g2(x1, x2) + 1/g3(x1, x2)]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analytic center: (-5.34036,-5.34036)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def g1(x1, x2):\n",
+    "    return 2*x2 - x1\n",
+    "\n",
+    "def g2(x1, x2):\n",
+    "    return 2*x1 - x2\n",
+    "\n",
+    "def g3(x1, x2):\n",
+    "    return 1 - x1 - x2\n",
+    "\n",
+    "def gradient(x1, x2):\n",
+    "    grad_x1 = 1/g1(x1, x2) - 2/g2(x1, x2) + 1/g3(x1, x2)\n",
+    "    grad_x2 = -2/g1(x1, x2) + 1/g2(x1, x2) + 1/g3(x1, x2)\n",
+    "    return grad_x1, grad_x2\n",
+    "\n",
+    "def descend():\n",
+    "    x1 = x2 = 0.25\n",
+    "    for i in range(100):\n",
+    "        grad_x1, grad_x2 = gradient(x1, x2)\n",
+    "        x1 -= 0.1*grad_x1\n",
+    "        x2 -= 0.1*grad_x2\n",
+    "    return x1, x2\n",
+    "\n",
+    "center_x1, center_x2 = descend()\n",
+    "print(\"Analytic center: (\"+str(round(center_x1, 5))+\",\"+str(round(center_x2, 5))+\")\")"
    ]
   }
  ],
