--- a/Assignment-1/Assignment-1.ipynb
+++ b/Assignment-1/Assignment-1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "\n",
     "x = np.linspace(0, 2, 100)\n",
     "while 0 in x:\n",
-    "    x = np.delete(x, np.where(x == 0))\n",
+    "    x = np.delete(x, np.where(x == 0)) # remove 0 from x\n",
     "\n",
     "plt.plot(x, f(x), label='f(x)')\n",
     "plt.plot(x, L(x), label='L(x)')\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +143,9 @@
     "\n",
     "x = np.linspace(0, 2, 100)\n",
     "while 0 in x:\n",
-    "    x = np.delete(x, np.where(x == 0))\n",
+    "    x = np.delete(x, np.where(x == 0)) # delete 0 from x\n",
     "while 1 in x:\n",
-    "    x = np.delete(x, np.where(x == 1))\n",
+    "    x = np.delete(x, np.where(x == 1)) # delete 1 from x\n",
     "\n",
     "eL = eL(x) / (x-1)\n",
     "eQ = eQ(x) / (x-1)**2\n",
@@ -166,13 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1.53499005 0.88622693]\n",
       "3.5244023582564334e-15\n"
      ]
     }
@@ -186,27 +187,29 @@
     "\n",
     "def lineSearchSubroutine(f, x, d, beta=0.5, alpha=0.5):\n",
     "    t = 1\n",
-    "    while f(x) - f(x + t * d) < -t*alpha*np.dot(nd.Gradient(f)(x), d):\n",
+    "    while f(x) - f(x + t * d) < -t*alpha*np.dot(nd.Gradient(f)(x), d): # line search subroutine to find the step size\n",
     "        t = beta*t\n",
     "    return t\n",
     "\n",
     "def combinationDescent(f, x, tolerance):\n",
-    "    gradient = nd.Gradient(f)(x)\n",
-    "    while np.linalg.norm(gradient) > tolerance:\n",
-    "        hessian = nd.Hessian(f)(x)\n",
-    "        evals , evecs = np.linalg.eig(hessian)\n",
-    "        if np.all(evals > 0):\n",
-    "            d = -np.linalg.solve(hessian, gradient)\n",
+    "    gradient = nd.Gradient(f)(x) # gradient of the function\n",
+    "    while np.linalg.norm(gradient) > tolerance: # checking if norm of gradient is less than or equal to tolerance\n",
+    "        hessian = nd.Hessian(f)(x) # hessian of the function\n",
+    "        evals , evecs = np.linalg.eig(hessian) # eigen values and eigen vectors of the hessian\n",
+    "        test_evals = np.all(evals > 0) # checking if all eigen values are positive\n",
+    "        if test_evals:\n",
+    "            d = -np.linalg.inv(hessian)@gradient # if all eigen values are positive then matrix multiplication of inverse of hessian and gradient\n",
     "        else :\n",
-    "            d = -gradient\n",
-    "        t = lineSearchSubroutine(f, x, d)\n",
+    "            d = -gradient # if all eigen values are not positive then d is equal to negative of gradient\n",
+    "        t = lineSearchSubroutine(f, x, d) # finding the step size\n",
     "        x = x + t*d\n",
-    "        gradient = nd.Gradient(f)(x)\n",
+    "        gradient = nd.Gradient(f)(x) # updating the gradient of the function\n",
     "    return x\n",
     "\n",
     "x = np.array([1.0, 1.0])\n",
     "tolerance = 1e-6\n",
     "y = combinationDescent(f, x, tolerance)\n",
+    "print(y)\n",
     "print(f(y))"
    ]
   },
@@ -229,14 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.33333333 0.33333333]\n"
+      "[0.33333333 0.33333333]\n",
+      "3.295836866004329\n"
      ]
     }
    ],
@@ -258,27 +262,29 @@
     "\n",
     "def lineSearchSubroutine(f, x, d, beta=0.5, alpha=0.5):\n",
     "    t = 1\n",
-    "    while f(x) - f(x + t * d) < -t*alpha*np.dot(nd.Gradient(f)(x), d):\n",
+    "    while f(x) - f(x + t * d) < -t*alpha*np.dot(nd.Gradient(f)(x), d): # line search subroutine to find the step size\n",
     "        t = beta*t\n",
     "    return t\n",
     "\n",
     "def combinationDescent(f, x, tolerance):\n",
-    "    gradient = nd.Gradient(f)(x)\n",
-    "    while np.linalg.norm(gradient) > tolerance:\n",
-    "        hessian = nd.Hessian(f)(x)\n",
-    "        evals , evecs = np.linalg.eig(hessian)\n",
-    "        if np.all(evals > 0):\n",
-    "            d = -np.linalg.solve(hessian, gradient)\n",
+    "    gradient = nd.Gradient(f)(x) # gradient of the function\n",
+    "    while np.linalg.norm(gradient) > tolerance: # checking if norm of gradient is less than or equal to tolerance\n",
+    "        hessian = nd.Hessian(f)(x) # hessian of the function\n",
+    "        evals , evecs = np.linalg.eig(hessian) # eigen values and eigen vectors of the hessian\n",
+    "        test_evals = np.all(evals > 0) # checking if all eigen values are positive\n",
+    "        if test_evals:\n",
+    "            d = -np.linalg.inv(hessian)@gradient # if all eigen values are positive then matrix multiplication of inverse of hessian and gradient\n",
     "        else :\n",
-    "            d = -gradient\n",
-    "        t = lineSearchSubroutine(f, x, d)\n",
+    "            d = -gradient # if all eigen values are not positive then d is equal to negative of gradient\n",
+    "        t = lineSearchSubroutine(f, x, d) # finding the step size\n",
     "        x = x + t*d\n",
-    "        gradient = nd.Gradient(f)(x)\n",
+    "        gradient = nd.Gradient(f)(x) # updating the gradient of the function\n",
     "    return x\n",
     "\n",
     "x = np.array([0.25, 0.25])\n",
-    "tolerance = 1e-6\n",
-    "print(combinationDescent(f, x, tolerance))"
+    "tolerance = 1e-6 # tolerance value\n",
+    "print(combinationDescent(f, x, tolerance))\n",
+    "print(f(combinationDescent(f, x, tolerance)))"
    ]
   }
  ],
