pakka pakka final commit

--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -5,9 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem 1\n",
-    "\n",
-    "## Part A\n",
+    "# Problem 1 - Taylor Approximation\n",
+    "Consider the univariate function\n",
+    "```math\n",
+    "f(x) = x^2 + log x\n",
+    "```\n",
+    "Suppose we want to approximate the function values in the vicinity of x = 1 using Taylor polynomials. Lets call the linear approximation function (linear Taylor polynomial) as L(x) and the quadratic approximation function (quadratic Taylor polynomial) as Q(x):<br>\n",
+    "1. Plot f(x), L(x) and Q(x) in the interval [0, 2] in the same graph.\n",
+    "2. Let the error associated with the linear approximation be given by eL(x) = f(x) − L(x), and the error associated with the quadratic approximation be given by eQ(x) = f(x)−Q(x). Plot eL(x)/x−1 and eQ(x)/((x−1)^2) in the interval [0, 2] in the same graph.\n",
+    "## Part 1 Solution\n",
     "```\n",
     "f(x) = x^2 + log(x)\n",
     "```\n",
@@ -45,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +82,7 @@
     "\n",
     "x = np.linspace(0, 2, 100)\n",
     "while 0 in x:\n",
-    "    x = np.delete(x, np.where(x == 0)) # remove 0 from x\n",
+    "    x = np.delete(x, np.where(x == 0)) # remove 0 from x because log(0) is undefined\n",
     "\n",
     "plt.plot(x, f(x), label='f(x)')\n",
     "plt.plot(x, L(x), label='L(x)')\n",
@@ -90,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part B\n",
+    "## Part 2 Solution\n",
     "```\n",
     "eL(x) = f(x) − L(x)\n",
     "and\n",
@@ -106,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +149,9 @@
     "\n",
     "x = np.linspace(0, 2, 100)\n",
     "while 0 in x:\n",
-    "    x = np.delete(x, np.where(x == 0)) # delete 0 from x\n",
+    "    x = np.delete(x, np.where(x == 0)) # delete 0 from x because log(0) is undefined\n",
     "while 1 in x:\n",
-    "    x = np.delete(x, np.where(x == 1)) # delete 1 from x\n",
+    "    x = np.delete(x, np.where(x == 1)) # delete 1 from x because denominator will be 0 for eL and eQ\n",
     "\n",
     "eL = eL(x) / (x-1)\n",
     "eQ = eQ(x) / (x-1)**2\n",
@@ -161,12 +167,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem 2\n"
+    "# Problem 2 - Combinational Descend Method\n",
+    "Write a code to compute the unconstrained minimum of the following optimization problem by implementing a combination descent algorithm with initial point(1, 1).\n",
+    "```math\n",
+    "f(x, y) = (x^2 − 3y^2)^2 + (sin(x^2 + y^2))^2\n",
+    "```\n",
+    "### Algorithm: Line Search Subroutine\n",
+    "Input: \n",
+    "- x: point in the domain of f \n",
+    "- d: descent direction for f at x \n",
+    "- β: reduction factor (0 < β < 1) \n",
+    "- α: acceptable descent parameter (0 < α < 0.5)\n",
+    "\n",
+    "Output: \n",
+    "- t: stepsize \n",
+    "\n",
+    "Algorithm: \n",
+    "```python\n",
+    "t := 1\n",
+    "while f(x) − f(x + td) < α * Df(x)(td):\n",
+    "    t := β * t<br>\n",
+    "return t as the stepsize\n",
+    "```\n",
+    "### Algorithm: Combinational Descend Method\n",
+    "Input: \n",
+    "- x: initial point in the domain of f \n",
+    "- η: tolerance level for stopping criterion\n",
+    "\n",
+    "Output: \n",
+    "- x: minimum point \n",
+    "\n",
+    "Algorithm: \n",
+    "```python\n",
+    "while norm(∇f(x)) > η:\n",
+    "    if Hf(x) is positive definite:\n",
+    "        d = [Hf(x)]^-1 * (-∇f(x))\n",
+    "    else:\n",
+    "        d = -∇f(x)\n",
+    "    Line search: choose a stepsize t > 0 using the backtracking line search subroutine\n",
+    "    x := x + td\n",
+    "Return x as the minimum.\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +231,7 @@
     "import numdifftools as nd\n",
     "\n",
     "def f(var):\n",
-    "    return (var[0]**2 - 3*var[1]**2)**2 + (np.sin(var[0]**2 + var[1]**2))**2\n",
+    "    return (var[0]**2 - 3*var[1]**2)**2 + (np.sin(var[0]**2 + var[1]**2))**2 # function to be minimized\n",
     "\n",
     "def lineSearchSubroutine(f, x, d, beta=0.5, alpha=0.5):\n",
     "    t = 1\n",
@@ -219,20 +267,28 @@
    "metadata": {},
    "source": [
     "# Problem 3\n",
-    "```\n",
-    "g1(X1, x2) = 2x2 - x1\n",
-    "g2(X1, x2) = 2x1 - x2 \n",
-    "g3(X1, x2) = 1 - x1 - x2\n",
-    "```\n",
-    "∇Ψ(x1, x2) = -Σlog(gi)<br>\n",
-    "= -log(g1) -log(g2) -log(g3)<br>\n",
-    "= -log(g1 x g2 x g3)<br>\n",
-    "= log(1/(g1 x g2 x g3))<br>"
+    "Given the set S defined as:\n",
+    "$$ S = {x \\in \\mathbb{R}^2: g_1(x_1,x_2) \\ge 0, g_2(x_1,x_2) \\ge 0, g_3(x_1,x_2) \\ge 0} $$\n",
+    "where:<br>\n",
+    "$g_1(x_1,x_2) = 2x_2 - x_1$<br>\n",
+    "$g_2(x_1,x_2) = 2x_1 - x_2$<br>\n",
+    "$g_3(x_1,x_2) = 1 - x_1 - x_2$<br>\n",
+    "The associated potential function is defined as:\n",
+    "$$ \\Psi(x) = -\\sum_{j=1}^{m} \\log g_j(x) $$\n",
+    "The goal is to find the analytic center of the set S, which is the vector that minimizes the potential function, i.e.,\n",
+    "$$ x_{analytic_center} = \\arg\\min_{x} \\Psi(x) $$\n",
+    "### Solution\n",
+    "$\\nabla \\Psi(x_1, x_2) =$ $-\\Sigma \\log(g_i) =$\n",
+    "$-\\log(g_1) - \\log(g_2) - \\log(g_3) =$\n",
+    "$-\\log(g_1 \\cdot g_2 \\cdot g_3) =$\n",
+    "$\\log\\left(\\frac{1}{g_1 \\cdot g_2 \\cdot g_3}\\right)$ <br>\n",
+    "<br>\n",
+    "This will be the new f(x). Beyond this, the process will be exactly the same as the previous problem(2)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
