bhai istg this is last, naam badal dena na ho toh

--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -14,44 +14,27 @@
     "1. Plot f(x), L(x) and Q(x) in the interval [0, 2] in the same graph.\n",
     "2. Let the error associated with the linear approximation be given by eL(x) = f(x) − L(x), and the error associated with the quadratic approximation be given by eQ(x) = f(x)−Q(x). Plot eL(x)/x−1 and eQ(x)/((x−1)^2) in the interval [0, 2] in the same graph.\n",
     "## Part 1 Solution\n",
-    "```\n",
-    "f(x) = x^2 + log(x)\n",
-    "```\n",
-    "L(x) = f(x0) + f'(x0)(x-x0)<br>\n",
-    "<br>\n",
-    "Since,  f'(x) = 2x + 1/x<br>\n",
-    "        f'(1) = 2 + 1 = 3<br>\n",
-    "        <br>\n",
-    "and,    x0 = 1<br>\n",
-    "        f(1) = 1^2 + log(1) <br>\n",
-    "        f(1) = 1 + 0 = 1<br>\n",
-    "        <br>\n",
-    "Therefore,  L(x) = 1 + 3(x-1)<br>\n",
-    "            L(x) = 3x - 2\n",
-    "            \n",
-    "```\n",
-    "L(x) = 3x - 2\n",
-    "```\n",
-    "Q(x) = f(x0) + f'(x0)(x-x0) + (f''(x0)((x-x0)^2))/2<br>\n",
-    "<br>\n",
-    "Since,  f''(x) = 2 + (-1/x^2)<br>\n",
-    "        f''(1) = 2 - 1 = 1<br>\n",
-    "        <br>\n",
-    "Therefore,  Q(x) = 1 + 3(x-1) + ((x-1)^2)/2<br>\n",
-    "            Q(x) = 3x - 2 + (x-1)^2/2<br>\n",
-    "            Q(x) = 3x - 2 + (x^2 - 2x + 1)/2<br>\n",
-    "            Q(x) = 3x - 2 + (x^2 - 2x + 1)/2<br>\n",
-    "            Q(x) = 3x - 2 + x^2/2 - x + 1/2<br>\n",
-    "            Q(x) = x^2/2 + 2x - 3/2<br>\n",
-    "            \n",
-    "```\n",
-    "Q(x) = x^2/2 + 2x - 3/2\n",
-    "```"
+    "$L(x) = f(x_0) + f'(x_0)(x-x_0)$ <br>\n",
+    "\n",
+    "Since, $f'(x) = 2x + \\frac{1}{x}$ <br>\n",
+    "we have, $f'(1) = 2 + 1 = 3$ <br>\n",
+    "and      $f(1) = 1^2 + \\log(1) = 1 + 0 = 1$. <br>\n",
+    "Therefore, \n",
+    "\n",
+    "$L(x) = 1 + 3(x-1) = 3x - 2$ <br>\n",
+    "\n",
+    "$Q(x) = f(x_0) + f'(x_0)(x-x_0) + \\frac{f''(x_0)((x-x_0)^2)}{2}$ <br>\n",
+    "\n",
+    "Since $f''(x) = 2 - \\frac{1}{x^2}$ <br>\n",
+    "we have $f''(1) = 2 - 1 = 1$ <br>\n",
+    "Therefore, \n",
+    "\n",
+    "$Q(x) = 1 + 3(x-1) + \\frac{(x-1)^2}{2} = 3x - 2 + \\frac{(x^2 - 2x + 1)}{2} = \\frac{x^2}{2} + 2x - \\frac{3}{2}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -97,22 +80,22 @@
    "metadata": {},
    "source": [
     "## Part 2 Solution\n",
-    "```\n",
-    "eL(x) = f(x) − L(x)\n",
+    "$eL(x) = f(x) - L(x)$\n",
+    "\n",
+    "$eQ(x) = f(x) - Q(x)$\n",
+    "\n",
+    "To plot:\n",
+    "\n",
+    "$\\frac{eL(x)}{(x-1)}$\n",
+    "\n",
     "and\n",
-    "eQ(x) = f(x) − Q(x)\n",
-    "```\n",
-    "To plot,    \n",
-    "```\n",
-    "eL(x)/(x-1)\n",
-    "and\n",
-    "eQ(x)/(x-1)^2\n",
-    "```"
+    "\n",
+    "$\\frac{eQ(x)}{(x-1)^2}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -168,10 +151,9 @@
    "metadata": {},
    "source": [
     "# Problem 2 - Combinational Descend Method\n",
-    "Write a code to compute the unconstrained minimum of the following optimization problem by implementing a combination descent algorithm with initial point(1, 1).\n",
-    "```math\n",
-    "f(x, y) = (x^2 − 3y^2)^2 + (sin(x^2 + y^2))^2\n",
-    "```\n",
+    "Write a code to compute the unconstrained minimum of the following optimization problem by implementing a combination descent algorithm with initial point(1, 1)\n",
+    "\n",
+    "$f(x, y) = (x^2 - 3y^2)^2 + (\\sin(x^2 + y^2))^2$\n",
     "### Algorithm: Line Search Subroutine\n",
     "Input: \n",
     "- x: point in the domain of f \n",
@@ -214,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +296,7 @@
     "    return 1 - x[0] - x[1]\n",
     "\n",
     "def f(x):\n",
-    "    return np.log(1/(g1(x)*g2(x)*g3(x)))\n",
+    "    return np.log(1/(g1(x)*g2(x)*g3(x))) # function to be minimized\n",
     "\n",
     "def lineSearchSubroutine(f, x, d, beta=0.5, alpha=0.5):\n",
     "    t = 1\n",
