commit(ting seppuku)

--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Problem 1 - Taylor Approximation\n",
     "Consider the univariate function\n",
-    "```math\n",
-    "f(x) = x^2 + log x\n",
-    "```\n",
+    "\n",
+    "$f(x) = x^2 + \\log(x)$\n",
+    "\n",
     "Suppose we want to approximate the function values in the vicinity of x = 1 using Taylor polynomials. Lets call the linear approximation function (linear Taylor polynomial) as L(x) and the quadratic approximation function (quadratic Taylor polynomial) as Q(x):<br>\n",
     "1. Plot f(x), L(x) and Q(x) in the interval [0, 2] in the same graph.\n",
     "2. Let the error associated with the linear approximation be given by eL(x) = f(x) − L(x), and the error associated with the quadratic approximation be given by eQ(x) = f(x)−Q(x). Plot eL(x)/x−1 and eQ(x)/((x−1)^2) in the interval [0, 2] in the same graph.\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
