coping with the changes in the remote repository

--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,16 +86,12 @@
     "\n",
     "To plot:\n",
     "\n",
-    "$\\frac{eL(x)}{(x-1)}$\n",
-    "\n",
-    "and\n",
-    "\n",
-    "$\\frac{eQ(x)}{(x-1)^2}$"
+    "$\\frac{eL(x)}{(x-1)}$ and $\\frac{eQ(x)}{(x-1)^2}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +164,7 @@
     "```python\n",
     "t := 1\n",
     "while f(x) − f(x + td) < α * Df(x)(td):\n",
-    "    t := β * t<br>\n",
+    "    t := β * t\n",
     "return t as the stepsize\n",
     "```\n",
     "### Algorithm: Combinational Descend Method\n",
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
