--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
     "The goal is to find the analytic center of the set S, which is the vector that minimizes the potential function, i.e.,\n",
     "$$ x_{analytic_center} = \\arg\\min_{x} \\Psi(x) $$\n",
     "### Solution\n",
-    "$\\nabla \\Psi(x_1, x_2) =$ $-\\Sigma \\log(g_i) =$\n",
+    "$\\Psi(x_1, x_2) =$ $-\\Sigma \\log(g_i) =$\n",
     "$-\\log(g_1) - \\log(g_2) - \\log(g_3) =$\n",
     "$-\\log(g_1 \\cdot g_2 \\cdot g_3) =$\n",
     "$\\log\\left(\\frac{1}{g_1 \\cdot g_2 \\cdot g_3}\\right)$ <br>\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
